--- a/zadania-Bootstrap/zadanie1/index.html
+++ b/zadania-Bootstrap/zadanie1/index.html
@@ -5,14 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="">
-                <
+            <div class="col-12 title">
+                <h2>My skills</h2>
+                <hr>
+            </div>
+            <div class="col-md-4 col-sm-6 col-12 skill">
+                <i class="fab fa-html5"></i>
+                <p>HTML5</p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-12 skill">
+                <i class="fab fa-css3-alt"></i>
+                <p>CSS3</p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-12 skill">
+                <i class="fab fa-js-square"></i>
+                <p>JavaScript</p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-12 skill">
+                <i class="fab fa-react"></i>
+                <p>ReactJS</p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-12 skill">
+                <i class="fab fa-git"></i>
+                <p>GIT</p>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-12 skill">
+                <i class="fab fa-wordpress"></i>
+                <p>WordPress</h3>
             </div>
         </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
