bs zadanie 1 poprawione i rozpoczęcie projektu spa

--- a/zadania-Bootstrap/zadanie2/index.html
+++ b/zadania-Bootstrap/zadanie2/index.html
@@ -21,7 +21,7 @@
                         </button>
                     </h2>
                 </div>      
-                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="card-body">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quis temporibus voluptates et tempore? Rem quas laboriosam, harum itaque tempora porro voluptatum veniam veritatis soluta nemo doloribus pariatur cupiditate iusto praesentium a sint nesciunt vel dolore ipsum maxime laborum? Nostrum veritatis, odit accusantium enim repellat saepe itaque minima iste laudantium.
                     </div>
