--- a/projekt-spa/index.html
+++ b/projekt-spa/index.html
@@ -6,11 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt-spa</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    
+    <header class="main-header">
+        <nav class="main-nav">
+            <div class="main-nav-container">
+                <img src="img/logo-txt.png" alt="Logo">
+            
+                <div class="mobile-menu-icon">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+                <div class="menu-container">
+                    <div class="close-menu-icon">
+                        <i class="fas fa-times"></i>
+                    </div>
+                    <ul class="menu-content">
+                        <li class="menu-item"><a href="">HOME</a></li>
+                        <li class="menu-item"><a href="">ABOUT</a></li>
+                        <li class="menu-item"><a href="">fEATURE</a></li>
+                        <li class="menu-item"><a href="">SERVICE</a></li>
+                        <li class="menu-item"><a href="">CONTACT</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="banner-container">
+            <div class="banner-content">
+                <p>SPA & BEAUTY CENTER</p>
+                <h1>Beauty and success starts here.</h1>
+                <P>Together creeping heaven upon third dominion be upon won't darkness rule behold it created good saw after she'd Our set living.</P>
+                <div class="banner-buttons">
+                    <a href="#" class="reserve">RESERVE NOW</a>
+                    <a href="#" class="watch"><i class="fas fa-play"></i>Watch our story</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <script src="js/script.js"></script>
 </body>
 </html>
