--- a/projekt-spa/index.html
+++ b/projekt-spa/index.html
@@ -10,24 +10,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
-    <link rel="stylesheet" href="/scss/style.css">
+    <link rel="stylesheet" href="scss/style.css">
 
 </head>
 <body>
-    <header class="main-header">
-        <nav class="main-nav">
-            <div class="main-nav-container">
-                <img src="img/logo-txt.png" alt="Logo">
+    <nav class="main-nav">
+        <div class="main-nav-container container">
+            <div class="main-nav-holder">
+                <a href="#" class="brand"><img src="img/logo-txt.png" alt="Logo"></a>
 
-                <div class="mobile-menu-icon">
+                <div class="mobile-hamburger">
                     <i class="fas fa-bars"></i>
                 </div>
 
-                <div class="menu-container">
-                    <div class="close-menu-icon">
+                <div class="open-menu-holder">
+                    <div class="mobile-close">
                         <i class="fas fa-times"></i>
                     </div>
-                    <ul class="menu-content">
+                    <ul class="menu">
                         <li class="menu-item"><a href="">HOME</a></li>
                         <li class="menu-item"><a href="">ABOUT</a></li>
                         <li class="menu-item"><a href="">FEATURE</a></li>
@@ -36,26 +36,28 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </div>
+    </nav>
 
+    <header class="main-header">
         <img src="img/header-flowers.png" alt="Photo" class="header-flowers">
         <img src="img/header-bg.png" alt="Photo" class="header-bg">
 
         <div class="banner-container">
-            <div class="banner-content">
+            <div class="banner-content container">
                 <p>SPA & BEAUTY CENTER</p>
                 <h1>Beauty and success starts here.</h1>
                 <P>Together creeping heaven upon third dominion be upon won't darkness rule behold it created good saw after she'd Our set living.</P>
                 <div class="banner-buttons">
-                    <a href="#" class="reserve">Reserve now</a>
-                    <a href="#" class="watch"><i class="fas fa-play"></i>Watch our story</a>
+                    <a href="#" class="btn-reserve">Reserve now</a>
+                    <a href="#" class="btn-watch"><i class="fas fa-play"></i>Watch our story</a>
                 </div>
             </div>
         </div>
     </header>
 
     <section class="about">
-        <div class="about-container">
+        <div class="about-container container">
             <img src="img/logo.png" alt="Photo" class="logo">
             <header class="about-header">
                 <p>ABOUT OUR SPA CENTER</p>
@@ -110,7 +112,7 @@
     </section>
 
     <section class="service">
-        <div class="section-container">
+        <div class="section-container container">
             <header class="section-header">
                 <h2>Popular Procedures</h2>
                 <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every wherein were meat kind wherein and martcin</p>
@@ -139,7 +141,7 @@
     </section>
 
     <section class="team">
-        <div class="team-container">
+        <div class="team-container container">
             <header class="section-header">
                 <h2>Experienced Team</h2>
                 <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every wherein were meat kind wherein and martcin </p>
@@ -198,7 +200,7 @@
     </section>
 
     <section class="blog">
-        <div class="section-container">
+        <div class="section-container container">
             <header class="section-header">
                 <h2>Latest From Blog</h2>
                 <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every wherein were meat kind wherein and martcin</p>
@@ -233,7 +235,7 @@
     </section>
 
     <section class="contact">
-        <div class="contact-container">
+        <div class="contact-container container">
             <header class="section-header">
                 <h2>Get In Touch</h2>
                 <p>To doesn't his appear replenish together called he of mad place won't wherein blessed second every wherein were meat kind wherein and martcin</p>
